StackEditor: style, use $ prefix for variables

--- a/client/new-stack-editor/lib/styl/main.styl
+++ b/client/new-stack-editor/lib/styl/main.styl
@@ -10,19 +10,19 @@ stackeditor.styl
 */
 }
 
-dark-panel-bg               = #2B2B30
-dark-tab-header-bg          = #131315
-dark-active-tab-color       = #9C9C9C
-dark-tab-color              = #5C5C5C
+$dark-panel-bg              = #2B2B30
+$dark-tab-header-bg         = #131315
+$dark-active-tab-color      = #9C9C9C
+$dark-tab-color             = #5C5C5C
 
-resize-handle-color         = #6EA3E5
-stack-bg-color              = #232327
-stack-fg-color              = #59595C
+$resize-handle-color        = #6EA3E5
+$stack-bg-color             = #232327
+$stack-fg-color             = #59595C
 
 .new-stack-editor
 
   .flex-split
-    background              stack-bg-color
+    background              $stack-bg-color
     vendor                  transition, all .5s ease
 
     &.ondrag
@@ -40,17 +40,17 @@ stack-fg-color              = #59595C
 
     &:hover
     &.ondrag
-      background            resize-handle-color
+      background            $resize-handle-color
 
   .toolbar
-    background              stack-bg-color
+    background              $stack-bg-color
     height                  40px
     min-height              40px !important
     border-bottom           2px solid #000
     borderBox()
 
   .content
-    background              stack-bg-color
+    background              $stack-bg-color
     &.safari-fix
       // just because of a bug in safari
       // https://bugs.webkit.org/show_bug.cgi?id=137730 ~ GG
@@ -68,8 +68,8 @@ stack-fg-color              = #59595C
 
   .flex-view
 
-    background              stack-bg-color
-    color                   stack-fg-color
+    background              $stack-bg-color
+    color                   $stack-fg-color
     vendor                  transition, all .5s ease
 
     &.with-title
@@ -101,7 +101,7 @@ stack-fg-color              = #59595C
         color               #999
         position            static
         z-index             7
-        background          stack-bg-color
+        background          $stack-bg-color
         width               100%
         borderBox()
 
@@ -113,7 +113,7 @@ stack-fg-color              = #59595C
       padding               0
       background            none
       border                none
-      color                 stack-fg-color
+      color                 $stack-fg-color
       z-index               10
 
       &.expand
@@ -129,42 +129,42 @@ stack-fg-color              = #59595C
 
     .ace-find-replace-view
       bottom                0
-      bg                    color, dark-tab-header-bg
-      border-bottom-color   dark-tab-header-bg
-      box-shadow            inset 0 -1px 0 dark-tab-header-bg
+      bg                    color, $dark-tab-header-bg
+      border-bottom-color   $dark-tab-header-bg
+      box-shadow            inset 0 -1px 0 $dark-tab-header-bg
 
       a, input
-        border-color        dark-panel-bg
+        border-color        $dark-panel-bg
 
         &.active
-          border-color      dark-panel-bg !important
+          border-color      $dark-panel-bg !important
 
       input
-        bg                  color, dark-panel-bg
-        box-shadow          0 1px 0 dark-panel-bg
-        color               dark-active-tab-color
+        bg                  color, $dark-panel-bg
+        box-shadow          0 1px 0 $dark-panel-bg
+        color               $dark-active-tab-color
 
         &:hover
-          bg                color, dark-panel-bg
-          border            1px solid dark-panel-bg
-          box-shadow        0 1px 0 dark-panel-bg
+          bg                color, $dark-panel-bg
+          border            1px solid $dark-panel-bg
+          box-shadow        0 1px 0 $dark-panel-bg
 
         &:focus
-          bg                color, dark-panel-bg
-          border            1px solid dark-panel-bg
-          box-shadow        0 1px 0 dark-panel-bg
+          bg                color, $dark-panel-bg
+          border            1px solid $dark-panel-bg
+          box-shadow        0 1px 0 $dark-panel-bg
 
       button
-        bg                  color, dark-panel-bg
-        color               dark-active-tab-color
-        border              1px solid dark-panel-bg
+        bg                  color, $dark-panel-bg
+        color               $dark-active-tab-color
+        border              1px solid $dark-panel-bg
 
         &:hover
-          bg                color, dark-panel-bg
+          bg                color, $dark-panel-bg
           opacity           .8
 
     .ace_gutter-layer
-      background-color      stack-bg-color !important
+      background-color      $stack-bg-color !important
 
     .ace_gutter
       border-right          1px solid #191919
