StackEditor: styles better naming for safari-flex-fix

--- a/client/new-stack-editor/lib/styl/main.styl
+++ b/client/new-stack-editor/lib/styl/main.styl
@@ -51,7 +51,7 @@ $stack-fg-color             = #59595C
 
   .content
     background              $stack-bg-color
-    &.safari-fix
+    &.safari-flex-fix
       // just because of a bug in safari
       // https://bugs.webkit.org/show_bug.cgi?id=137730 ~ GG
       height                calc(100% \- 70px)
