client: jekyll: minor pricing fixes

--- a/docs/_includes/css/pricing.css
+++ b/docs/_includes/css/pricing.css
@@ -720,7 +720,7 @@ a:hover {
 }
 
 .Pricing-PriceSegments--featureSection a {
-  color: #48BA7D;
+  color: #67A2EE;
 }
 
 .Pricing-PriceSegments--priceSection {
