jekyll: change video link and title
Signed-off-by: Umut Sirin <umutsirin1@gmail.com>

--- a/docs/_css/home/content-with-video.scss
+++ b/docs/_css/home/content-with-video.scss
@@ -12,6 +12,9 @@
     letter-spacing: 1.5px;
     margin-bottom: 22px;
   }
+  h4.tight {
+    letter-spacing: normal;
+  }
 }
 .Homepage-ContentWithVideo--visual {
   flex: 0 0 auto;
