--- a/docs/_includes/home/content-with-video.html
+++ b/docs/_includes/home/content-with-video.html
@@ -1,6 +1,8 @@
 {% assign src = include.video_src %}
 {% assign img = include.img_src %}
 {% assign img2x = include.img2x_src %}
+{% assign caption = include.video_caption %}
+{% assign caption_video_id = include.video_caption_video_id %}
 
 <div class='Homepage-ContentWithVideo Homepage--containerOffset'>
   <div class='Homepage--container'>
@@ -10,12 +12,19 @@
       <p>{{ include.description }}</p>
       <span>{{ include.footnote }}</span>
     </div>
-    <div class='Homepage-ContentWithVideo--visual showModal' data-youtube-id="{{ include.video_id}}">
-      <img src="{{ site.url }}{{ img }}" srcset="{{ site.url }}{{ img }} 1x, {{ site.url }}{{ img2x }} 2x" />
-      <h4 class="title">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><use xlink:href="#video-play-button"></use></svg>
-        {{ include.video_title }}
-      </h4>
+    <div class="Homepage-ContentWithVideo--visualContainer">
+      <div class='Homepage-ContentWithVideo--visual showModal' data-youtube-id="{{ include.video_id}}">
+        <img src="{{ site.url }}{{ img }}" srcset="{{ site.url }}{{ img }} 1x, {{ site.url }}{{ img2x }} 2x" />
+        <h4 class="tight title">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><use xlink:href="#video-play-button"></use></svg>
+          {{ include.video_title }}
+        </h4>
+      </div>
+      <div class="Homepage-ContentWithVideo--visualCaption showModal" data-youtube-id="{{ caption_video_id }}">
+        {% if caption %}
+          {{ caption }}
+        {% endif %}
+      </div>
     </div>
   </div>
 </div>
