FontAwesome: use https CDN instead fixes #10060

--- a/client/new-stack-editor/lib/styl/main.styl
+++ b/client/new-stack-editor/lib/styl/main.styl
@@ -1,7 +1,7 @@
 
 // FontAwesome
-$fa-font-path = "http://netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts"
-@import "../../../node_modules/font-awesome-stylus/stylus"
+$fa-font-path = 'https://netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts'
+@import '../../../node_modules/font-awesome-stylus/stylus'
 
 @css {
 /*
