--- a/client/new-stack-editor/lib/styl/main.styl
+++ b/client/new-stack-editor/lib/styl/main.styl
@@ -18,6 +18,9 @@ $dark-tab-color             = #5C5C5C
 $resize-handle-color        = #6EA3E5
 $stack-bg-color             = #232327
 $stack-fg-color             = #59595C
+$stack-fg-color-bright      = #DDDDDD
+$stack-fg-color-yellow      = #FCC34E
+$stack-border-color         = #000000
 
 .new-stack-editor
 
@@ -36,7 +39,7 @@ $stack-fg-color             = #59595C
         height              2px
 
   .flex-resizer
-    background              #000
+    background              $stack-border-color
 
     &:hover
     &.ondrag
@@ -46,7 +49,7 @@ $stack-fg-color             = #59595C
     background              $stack-bg-color
     height                  40px
     min-height              40px !important
-    border-bottom           2px solid #000
+    border-bottom           2px solid $stack-border-color
     borderBox()
 
   .content
@@ -57,14 +60,29 @@ $stack-fg-color             = #59595C
       height                calc(100% \- 70px)
 
   .mainview
-    border-left             2px solid #000
-    border-right            2px solid #000
+    border-left             2px solid $stack-border-color
+    border-right            2px solid $stack-border-color
     borderBox()
 
   .statusbar
-    background              #000 !important
+    background              $stack-border-color !important
     height                  30px
     min-height              30px !important
+    padding                 9px
+    font-size               12px
+    color                   $stack-fg-color
+
+    h3
+      margin-right          12px
+
+    h3
+    caret
+      fl()
+
+  .logs
+    .title
+      color                 $stack-fg-color-yellow !important
+
 
   .flex-view
 
