Sidebar: fix sidebar width on collapse, bigger stack icons on collapsed

--- a/client/app/lib/components/sidebarsection/styl/sidebarsection.styl
+++ b/client/app/lib/components/sidebarsection/styl/sidebarsection.styl
@@ -53,3 +53,5 @@
 .SidebarSection.active
   .SidebarSection-headerTitle a
     color                   #e1e1e1 !important
+    &:before
+      border-color          #e1e1e1 !important
