--- a/client/app/lib/components/sidebarstacksection/styl/sidebarstacksection.styl
+++ b/client/app/lib/components/sidebarstacksection/styl/sidebarstacksection.styl
@@ -9,12 +9,10 @@
   .SidebarStackSection
     max-width               220px
 
-    h4
-      color                 #818181
+    color                   #818181
 
     &.active
-      h4
-        color               #E1E1E1
+      color                 #E1E1E1
 
     .SidebarSection-body
       rel()
@@ -63,7 +61,7 @@
     &.draft
       margin-bottom         0px
 
-    .SidebarSection-headerTitle:before
+    .SidebarSection-headerTitle a:before
       content               ''
       rel()
       borderBox()
