--- a/client/app/lib/styl/resurrection.styl
+++ b/client/app/lib/styl/resurrection.styl
@@ -79,7 +79,7 @@ pre
   &.with-sidebar
     #main-panel-wrapper
       fr()
-      vendor                transition, margin-left .3s ease
+      vendor                transition, width .3s ease
       margin-left           sidebarWidth + 1
       width                 calc(100% - 258px)
 
