StackEditor: Baseview: loading state for base views

--- a/client/new-stack-editor/lib/styl/main.styl
+++ b/client/new-stack-editor/lib/styl/main.styl
@@ -124,6 +124,10 @@ $stack-border-color         = #000000
         &.collapse
           display           block !important
 
+    &.loading
+      .controls
+        .kdloader
+          display           block !important
 
     .wrapper
 
@@ -152,6 +156,10 @@ $stack-border-color         = #000000
         height              auto
         display             flex
         flex-direction      row-reverse
+
+        .kdloader
+          width             16px
+          display           none
 
 
     .kdbutton.expand
