--- a/client/new-stack-editor/lib/styl/main.styl
+++ b/client/new-stack-editor/lib/styl/main.styl
@@ -267,7 +267,11 @@ $stack-border-color         = #000000
 
 
 #intercom-container
-  display                   none
+  &.small
+    .intercom-launcher-frame
+      vendor                transition, all 1s 1s ease !important
+      vendor                transform, scale(.5)
+      vendor                transform-origin, 80px 80px
 
 #kdmaincontainer.hover
 #kdmaincontainer.collapsed
