home/paymenthistory: replace flux with redux
Signed-off-by: Umut Sirin <umutsirin1@gmail.com>

--- a/client/home/lib/styl/homepaymenthistory.styl
+++ b/client/home/lib/styl/homepaymenthistory.styl
@@ -30,3 +30,13 @@ homepaymenthistory.styl
       r-sprite              app left_arrow
       display               inline-block
       abs()
+
+  .SingleInvoice
+    display                 flex
+    align-items             center
+    justify-content         space-between
+
+    .Label
+      padding-right         1.5rem
+      &:last-child
+        padding-right       0
