home/billing: show a divider between info and form
Signed-off-by: Umut Sirin <umutsirin1@gmail.com>

--- a/client/home/lib/styl/hometeambilling.styl
+++ b/client/home/lib/styl/hometeambilling.styl
@@ -1,166 +1,4 @@
-@css {
-/*
-Home Team Billing styles
-*/
+.team-billing .divider {
+  margin: 25px 0
+  border-top: 1px solid #dcdcdc
 }
-
-.HomeTeamBillingForm
-  margin-top                -65px
-
-.HomeAppView--billing-form
-  margin-top                20px
-
-  .has-error
-    .HomeAppView-input
-    div.Select-control
-      border                1px solid red
-
-  fieldset
-    padding-top             18px
-
-  .HomeAppView--cc
-    size                    416px auto
-    bg                      color, #42488E
-    gradient                #42488E, #413C86
-    margin                  0 auto
-    rounded                 10px
-    padding                 30px
-    shadow                  0 2px 4px rgba(0,0,0,.16)
-    borderBox()
-    rel()
-
-    fieldset
-      padding-top           24px
-
-    .Select-control
-      border                1px solid #403580
-      rounded               3px
-      height                42px
-
-      .Select-placeholder
-      .Select-value
-        line-height         40px
-        padding             0 11px
-        color               #C5C5C5
-        font-weight         300
-
-
-      .Select-arrow
-        border-color        #ccc transparent transparent
-        border-width        6px 6px 1px
-
-
-    label
-      width                 auto
-      font-size             14px
-      color                 #fff
-      font-weight           300
-      margin-bottom         7px
-
-      dBlock()
-
-    .HomeAppView-input
-      width                 100%
-
-    .HomeAppView-input.cvc
-    .card-number
-      letter-spacing        4px
-      font-family           SourceCodePro
-      font-size             15px
-      font-weight           300
-      &::-webkit-input-placeholder
-        color               #C5C5C5
-      &:-moz-placeholder
-        color               #C5C5C5
-
-    .card-number
-      width                 100%
-
-    .wrapper--expiration
-      margin-right          14px
-      fl()
-
-      .expiration-month
-        width               138px
-        margin-right        10px
-      .expiration-year
-        width               80px
-      .wrapper--cvc
-        fl()
-
-.HomeAppView--section.payment
-  > fieldset
-    padding-top             24px
-
-.HomeAppView-selectBoxWrapper
-  height                    42px
-  font-size                 14px
-  color                     #A59999
-  kalc                      width, (100% \- 130px)
-  display                   inline-block
-  borderBox()
-
-.HomeAppViewListItem.team_free
-  .HomeAppViewListItem-label
-    color                   inherit
-
-.PlansList-price
-  font-weight               600
-
-
-.HomeAppViewListItem.team_base
-  .PlansList-price
-    color                   $accentColor
-
-.HomeTeamBillingPlansList-row
-  borderizeListItems        10px, 1px solid #ddd
-
-.HomeTeamBillingPlansList
-  .HomeAppView--ActionBar
-    border-top              1px solid #ddd
-    margin-top              10px
-    padding-top             20px
-
-
-.HomeAppView--section.billing
-
-  .HomeAppView--ActionBar
-
-    .GenericButton
-      margin-top            -12px
-    .showCancelButton
-      margin-right          35px
-    .hideCancelButton
-      display               none
-
-.CardNumber-wrapper
-
-  &:after
-    content                 ''
-    display                 block
-    right                   40px
-    top                     61px
-    width                   36px
-    height                  22px
-    z-index                 1
-    pointer-events          none
-    border-radius           3px
-    bg                      color, #ddd
-    abs()
-
-  &.american-express:after
-  &.visa:after
-  &.mastercard:after
-  &.discover:after
-    bg                      color, transparent
-
-  &.american-express:after
-    r-sprite                'app', 'american_express'
-  &.visa:after
-    r-sprite                'app', 'visa'
-  &.mastercard:after
-    r-sprite                'app', 'mastercard'
-  &.discover:after
-    r-sprite                'app', 'discover'
-
-
