--- a/client/home/lib/styl/hometeammates.styl
+++ b/client/home/lib/styl/hometeammates.styl
@@ -36,25 +36,14 @@ hometeammates.styl
         left                4px
         r-sprite            app badge_icon_admin
 
-
-  &:first-of-type
-    .avatarview
-      top                   4px
-      overflow              visible
-
-    .dropdown
-      top                   10px
-
   .avatarview
     height                  40px
-    abs                     24px 0 0 0px
     &.default
       r-sprite              home user_default
 
   .details
     line-height             24px
     margin-left             57px
-
 
   p
     dInline()
@@ -84,7 +73,6 @@ hometeammates.styl
 
 
   .dropdown
-    abs                     30px 2px 0 0
 
     .role
       display               inline-block
@@ -109,4 +97,18 @@ hometeammates.styl
         borderBox()
 
 
+.HomeApp-Teammate--ListItem
+  padding-top               0px !important
+  .avatarview
+    abs                     4px 0 0 0px
+    overflow                visible
 
+  .dropdown
+    abs                     20px 2px 0 0
+
+.HomeApp-Teammate--ListItem ~ .HomeApp-Teammate--ListItem
+  padding-top               20px !important
+  .avatarview
+    top                     24px
+  .dropdown
+    top                     30px
