--- a/client/new-stack-editor/lib/styl/main.styl
+++ b/client/new-stack-editor/lib/styl/main.styl
@@ -17,10 +17,14 @@ $dark-tab-color             = #5C5C5C
 
 $resize-handle-color        = #6EA3E5
 $stack-bg-color             = #232327
+$stack-bg-color-bright      = #29292D
 $stack-fg-color             = #59595C
 $stack-fg-color-bright      = #DDDDDD
 $stack-fg-color-yellow      = #FCC34E
 $stack-border-color         = #000000
+
+$stack-sideview-width       = 420px
+$stack-border-width         = 2px
 
 .new-stack-editor
 
@@ -33,10 +37,10 @@ $stack-border-color         = #000000
 
     &.vertical
       > .flex-resizer
-        width               2px
+        width               $stack-border-width
     &.horizontal
       > .flex-resizer
-        height              2px
+        height              $stack-border-width
 
   .flex-resizer
     background              $stack-border-color
@@ -49,7 +53,7 @@ $stack-border-color         = #000000
     background              $stack-bg-color
     height                  40px
     min-height              40px !important
-    border-bottom           2px solid $stack-border-color
+    border-bottom           $stack-border-width solid $stack-border-color
     padding                 14px
     font-size               13px
     color                   $stack-fg-color-bright
@@ -77,8 +81,8 @@ $stack-border-color         = #000000
       height                calc(100% \- 70px)
 
   .mainview
-    border-left             2px solid $stack-border-color
-    border-right            2px solid $stack-border-color
+    border-left             $stack-border-width solid $stack-border-color
+    border-right            $stack-border-width solid $stack-border-color
     borderBox()
 
   .statusbar
@@ -149,7 +153,7 @@ $stack-border-color         = #000000
       &.expanding
         height              100vh
 
-      .title
+      > .title
         padding             15px 20px
         font-size           13px
         font-weight         600
@@ -275,12 +279,13 @@ $stack-border-color         = #000000
 
   .side-view
     background              $stack-bg-color
-    width                   420px
-    min-width               420px
+    width                   $stack-sideview-width
+    min-width               $stack-sideview-width
     abs                     0px, 0px
     z-index                 100
     box-shadow              0 0 30px -5px
     vendor                  transition, all 400ms ease-in
+    border-left             $stack-border-width solid $stack-bg-color
     visibility              visible
 
     &.hidden
@@ -296,7 +301,7 @@ $stack-border-color         = #000000
     &.pinned
       position              inherit
       box-shadow            none
-      border-left           2px solid $stack-fg-color
+      border-color          $stack-fg-color
 
       .controls .kdbutton.pin
         display             block
