realign and fix color for year field in safari

--- a/client/landing/site.landing/styl/team.payment.styl
+++ b/client/landing/site.landing/styl/team.payment.styl
@@ -50,5 +50,6 @@ $disabledOpacity = .5
 .cc-form input[disabled=disabled]
   opacity                   $disabledOpacity
   cursor                    not-allowed
+  -webkit-text-fill-color   rgba(74, 74, 74, 1)
   & ~ .placeholder-helper
     opacity                 $disabledOpacity
