Fix text and X alignment, add ESC functionality

--- a/client/app/lib/components/contentModal/styl/contentModal.styl
+++ b/client/app/lib/components/contentModal/styl/contentModal.styl
@@ -36,9 +36,12 @@ contentModal.styl
 
     .kdmodal-inner .close-icon
       r-sprite              app content_modal_close_icon
-      top                   24px
-      right                 24px
-      background-position   0 !important
+      width                 23px
+      height                24px
+      top                   19px
+      right                 19px
+      background-position   center !important
+      background-repeat     no-repeat
 
     &.formline.button-field
       button.kdbutton
@@ -120,7 +123,7 @@ contentModal.styl
         color               #727272
         font-size           22px
         font-weight         300
-        line-height         60px
+        line-height         65px
         display             inline-block
         letter-spacing      0px
 
