Add loader to Slack Invite integration

--- a/client/home/lib/styl/homemyteam.styl
+++ b/client/home/lib/styl/homemyteam.styl
@@ -226,6 +226,9 @@ homemyteam.styl
     .use-different-team
       padding-bottom        50px
 
+  .canvas-loader
+    text-align              center
+
 
 .HomeAppView--section.send-invites
   overflow                  hidden
