Send Invites button and become active dynamically

--- a/client/home/lib/styl/homesection.styl
+++ b/client/home/lib/styl/homesection.styl
@@ -30,6 +30,11 @@ Home Section styles
 
   .HomeAppView--button.primary
     margin-left             30px
+    transition              opacity 0.5s
+
+    &.inactive
+      opacity               0.4
+      pointer-events        none
 
   .HomeAppView--button.fr
     margin-left             30px
