--- a/docs/_includes/css/pricing.css
+++ b/docs/_includes/css/pricing.css
@@ -944,32 +944,15 @@ a:hover {
 }
 #Pricing-PriceSegments--more {
   z-index: 0;
+  top: 0px;
   margin-top: 0;
-  margin-bottom: -216px;
+  margin-bottom: 30px;
   border-top: none;
   border-radius: 0 0 4px 4px;
   box-sizing: border-box;
   position: relative;
-  top: -246px;
-  transition: top .2s ease, margin-bottom .2s ease;
-  box-shadow: inset 0 40px 40px -40px rgba(0,0,0,.08);
 }
 
-#Pricing-PriceSegments--more.in {
-  top: 0px;
-  margin-bottom: 30px;
-}
-
-#Pricing-PriceSegments--close {
-  position: absolute;
-  right: 22px;
-  top: 17px;
-  font-weight: 500;
-  font-size: 14px;
-  color: #67A2EE;
-  letter-spacing: 0.04px;
-  line-height: 18px;
-}
 #Pricing-PriceSegments--more > .Pricing-PriceSegments--featureSection.features {
   padding-right: 40px;
 }
@@ -979,26 +962,38 @@ a:hover {
   box-sizing: border-box;
   text-align: left;
 }
-/*
-#Pricing-PriceSegments--more > div:first-of-type {
-  padding: 0 40px 0 0;
+
+#Pricing-PriceSegments--more p.intro {
+  font-size: 16px;
+  color: #989898;
+  margin: 60px 0 0;
+  padding: 0 60px;
 }
-#Pricing-PriceSegments--more > div:last-child {
-  flex: 0 0 auto;
-  width: 328px;
-  padding: 0 0 0 40px;
-  border-right: none;
-}*/
+
+#Pricing-PriceSegments--more p.intro strong {
+  font-weight: 600;
+  color: #F2778A;
+  display: block;
+  font-size: 24px;
+}
 
 #Pricing-PriceSegments--more h3 {
-  font-weight: 600;
-  font-size: 20px;
-  color: #727272;
+  font-size: 13px;
+  color: #989898;
+  font-weight: 300;
+  margin-bottom: 12px;
+  text-transform: uppercase;
+}
+#Pricing-PriceSegments--more h4 {
+  font-weight: 400;
+  font-size: 16px;
+  color: #989898;
   letter-spacing: 0.07px;
   margin-bottom: 24px;
 }
-#Pricing-PriceSegments--more h3 strong {
-  color: #48BA7D;
+#Pricing-PriceSegments--more h4 strong {
+  color: #727272;
+  font-size: 24px;
   font-weight: 600;
 }
 
@@ -1022,6 +1017,9 @@ a:hover {
 
 .Pricing-PriceSegments section:first-child {
   margin-top: -150px;
+}
+
+.Pricing-PriceSegments section#Pricing-PriceSegments--devTeams {
   margin-bottom: 0;
 }
 
@@ -1291,6 +1289,12 @@ a:hover {
     margin-bottom: 30px;
     top: 0px;
   }
+
+  #Pricing-PriceSegments--more p.intro {
+    margin: 35px 0 0;
+    padding: 0 35px;
+  }
+
   #Pricing-PriceSegments--more > .Pricing-PriceSegments--featureSection.title {
     width: 100%;
   }
@@ -1354,6 +1358,12 @@ a:hover {
     margin-bottom: 30px;
     top: 0px;
   }
+
+  #Pricing-PriceSegments--more p.intro {
+    margin: 28px 0 0;
+    padding: 0 28px;
+  }
+
   #Pricing-PriceSegments--more > .Pricing-PriceSegments--featureSection,
   #Pricing-PriceSegments--more > .Pricing-PriceSegments--priceSection {
     width: 100%;
